fix(frontend): avoid blocking blocktools
add extra padding to the right when the blockId will appear on hovering a block, so it will not be blocked by the activity section

closes #1183

--- a/frontend/app/src/styles/publication.scss
+++ b/frontend/app/src/styles/publication.scss
@@ -11,10 +11,11 @@
   height: 100%;
   width: 100%;
   position: relative;
-  overflow: hidden;
+  // overflow: hidden;
 
   [data-radix-scroll-area-viewport] {
     scroll-behavior: smooth;
+    padding-inline-end: 6rem;
   }
 }
 
